force-app/main/default/objects/ZipCodeMatch__c/ZipCodeMatch__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>On person account when Zip code is selected auto populate the Carrier code, region code and MSA.</description>
    <label>Zip Code Match</label>
</CustomObject>