force-app/main/default/objects/ZipCodeMatch__c/fields/Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Code__c</fullName>
    <label>Carrier Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>