force-app/main/default/objects/ZipCodeMatch__c/fields/Cheetah_Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>Cheetah_Carrier_Code__c</fullName>
    <label>Cheetah Carrier Code</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>