force-app/main/default/objects/ZipCodeMatch__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <label>Region Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>